--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <h2>Como funciona</h2>
 
         <section class="comoFunciona" id="comofunciona">
+
             <div class="caixaLados">
                 <div class="left">
                     <p>Hoje contamos com mais de 300 TV's indoor instaladas em diferentes estabelicimentos.</p>
@@ -70,9 +71,32 @@
                     <img src="assets/img/tvSuasMarcasAqui.PNG" alt="">
                 </div>
             </div>
+
+            <div class="caixaLados">
+                <div class="left">
+                    <p>Sua propaganda em nossas TV’s traz visibilidade, aumento de vendas, além de ser uma ótima forma
+                        de atrair novos clientes.</p>
+                </div>
+
+                <div class="right">
+                    <img src="assets/img/tvPrincipal.PNG" alt="">
+                </div>
+            </div>
+
+            <div class="caixaLados">
+                <div class="left">
+                    <p>Hoje contamos com mais de 300 TV's indoor instaladas em diferentes estabelicimentos.</p>
+                </div>
+
+                <div class="right">
+                    <img src="assets/img/grafico.jpg" alt="">
+                </div>
+            </div>
+
+
         </section>
 
-        <section class="comoFunciona " id="comofunciona">
+        <!-- <section class="comoFunciona " id="comofunciona">
             <div class="caixaLados">
                 <div class="leftRight">
                     <img src="assets/img/tvPrincipal.PNG" alt="">
@@ -95,7 +119,7 @@
                     <img src="assets/img/grafico.jpg" alt="">
                 </div>
             </div>
-        </section>
+        </section> -->
 
 
 
